# gelbooru-tauri

./: .gitignore  .prettierrc  AGENTS.md  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts  yeger-vue-masonry-wall-6.1.1.tgz
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.2-MILESTONE-AUDIT.md
.planning/codebase/: .gitkeep  ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: download-record-reappears-after-restart.md  gallery-thumbnails-not-loading-v2.md  gallery-thumbnails-not-loading.md  gallery-thumbnails-not-showing-v3.md  local-gallery-not-refreshing-after-path-change.md  local-gallery-scroll-performance.md  local-gallery-scroll-resets-on-load-more.md  proxy-connection-refused-at-127-0-0-1-7897.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: 00-summary.md  ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
coverage/: clover.xml  coverage-final.json  index.html
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  gelbooru.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: download.rs  favorite_tags.rs  gallery.rs  gelbooru.rs  indexing.rs  mod.rs  settings.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: mod.rs  page.rs  post.rs  tag.rs
src-tauri/src/services/: http.rs  mod.rs  scraper.rs
tests/: gallery-thumbnails.spec.ts
(+143 files in other folders)
